--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Abhishek Kumar Saha",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^7.3.4",
